--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "ajv": "^6.4.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
     "ng2-stomp-service": "^1.2.2",
     "rxjs": "^5.5.6",
     "sockjs-client": "^1.1.4",
